syntax = "proto3";

package server;

service Search {
    rpc ProductSearch (ProductSearchRequest) returns (ProductSearchResponse) {}
}

// ProductSearch
message ProductSearchRequest {
    string name = 1;
}
message ProductSearchResponse {
    repeated Result results = 5;
}
message Result {
    string product_uuid = 1;
    string category = 2;
    string name = 3;
    string uom = 4;
    repeated Index indexes = 5;
}
message Index {
    int32 index = 1;
}

/* eslint-disable */

/** Generate GO proto
protoc --go_out=plugins=grpc:. *.proto
 */

/** Generate JS proto
 protoc -I=. ./proto/todo.proto \
  --js_out=import_style=commonjs:./src/Todo \
  --grpc-web_out=import_style=commonjs,mode=grpcwebtext:./src/Todo
 */

//  import _"github.com/jnewmano/grpc-json-proxy/codec"
//  go run github.com/jnewmano/grpc-json-proxy grpc-json-proxy
//  http://www.objgen.com/json?demo=true